<resources>
    <string name="app_name">SportyMe</string>

    <!-- Strigns de la vista Login -->
    <string name="descripcionLogo">descripcion Logo</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="botonLogin">Log in</string>
    <string name="botonRegistro">Registrarse</string>

    <!-- Strings para la vista registro -->
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="usuarioRegistro">Usuario</string>
    <string name="passwordRegistro">Contraseña</string>
    <string name="repeatpassword">Repite contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="calle">Calle</string>
    <string name="cp">Código Postal</string>
    <string name="poblacion">Poblacion</string>
    <string name="comunidad">Comunidad</string>
    <string name="realizarRegistro">Realizar Registro</string>

    <!-- String para la vista principal / mostrar_articulo -->
    <string name="botonComprar">Realizar Compra</string>
    <string name="botonAniadir">+</string>
    <string name="botonQuitar">-</string>
    <string name="cantidadArticulos">0</string>
    <string name="descripcionArticulo">Descripción</string>
    <string name="textoDescripcion">Descripcion de la prenda</string>
    <string name="botonRealizarCompra">Realizar Compra</string>
    <string name="tallas">TALLAS</string>
    <string name="botonAñadirCarrito">Añadir al Carrito</string>
    <string-array name="valoresTallas">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>
    <string name="precio">precio</string>

    <!-- Strings del menu de la vista principal -->
    <string name="filtradoCamisetas">Filtrar por camisetas</string>
    <string name="filtradoPantalones">Filtrar por pantalones</string>
    <string name="filtradoSudaderas">Filtrar por sudaderas</string>
    <string name="filtradoZapatillas">Filtrar por zapatillas</string>
    <string name="perfil">Perfil</string>
    <string name="informacionContacto">Informacion de contacto</string>
    <string name="logOut">Desconectarse</string>

    <!-- String de la vista contacto -->
    <string name="correoContacto">sportyme@sporyme.com</string>
    <string name="telefonoContacto">689 68 68 68</string>
    <string name="botonAtras">Pag. Principal</string>

    <!-- String de la vista perfil -->
    <string name="nombrePerfil">Nombre:</string>
    <string name="apellidosPerfil">Apellidos:</string>
    <string name="usuarioPerfil">Usuario:</string>
    <string name="correoPerfil">Correo:</string>
    <string name="volverpagPrincipal">Pag. Principal</string>


    <!--String para la información de la vista principal -->
    <string name="descripcionImagen">Descripcion imagen</string>

    <!-- String de la vista Carrito -->
    <string name="realizarCompraCarrito">Realizar Compra</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="gastosEnvio">Gastos de envio</string>


</resources>