<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral20"
    android:textAlignment="center"
    tools:context=".CarritoActivity">

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="413dp"
        android:layout_height="470dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/botonRealizarCompraCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/botonRealizarCompra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TableLayout"
        app:layout_constraintVertical_bias="0.718" />

    <TextView
        android:id="@+id/textoSubtotal"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:text="@string/subtotal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/botonRealizarCompraCarrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TableLayout"
        app:layout_constraintVertical_bias="0.766" />

    <TextView
        android:id="@+id/textoGastosEnvio"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:text="@string/gastosEnvio"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/botonRealizarCompraCarrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toEndOf="@+id/textoSubtotal"
        app:layout_constraintTop_toBottomOf="@+id/TableLayout"
        app:layout_constraintVertical_bias="0.766" />

    <TextView
        android:id="@+id/textoTotal"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:text="@string/total"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/botonRealizarCompraCarrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="@+id/textoGastosEnvio"
        app:layout_constraintTop_toBottomOf="@+id/TableLayout"
        app:layout_constraintVertical_bias="0.766" />

    <Button
        android:id="@+id/btnSeguir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seguir Comprando"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toEndOf="@+id/botonRealizarCompraCarrito"
        app:layout_constraintTop_toBottomOf="@+id/textoTotal"
        app:layout_constraintVertical_bias="0.367" />

</androidx.constraintlayout.widget.ConstraintLayout>